widget: Unset hyperlink URI when moving the mouse to a non-hyperlink cell

https://bugzilla.gnome.org/show_bug.cgi?id=789536